--- a/index.html
+++ b/index.html
@@ -7,9 +7,84 @@
   <title>Netflix Uzbekistan - Watch TV Shows Online, Watch Movies Online</title>
   <link rel="stylesheet" href="style.css">
   <link rel="icon" type="image/x-icon" href="/images/fav.ico">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 <body>
-  
+  <header>
+    <div class="container">
+      <div class="logo">
+        <img src="/images/netflix.png" alt="NETFLIX">
+      </div>
+      <div class="sign-in">
+        <a href="#">Sign In</a href="#">
+      </div>
+    </div>
+    <div class="movies-container">
+      <div class="unlimited-movies">
+        <h1>Unlimited movies, TV shows, and more.</h1>
+        <h2>Watch anywhere. Cancel anytime.</h2>
+        <p>Ready to watch? Enter your email to create or restart your membership.</p>
+        <div class="register">
+          <input type="email" placeholder="Email address">
+          <a href="#">Get Started</a>
+        </div>
+      </div>
+    </div>
+  </header>
+
+  <main>
+    <div class="line"></div>
+  <div class="flex-container">
+    <div class="divided container">
+      <div class="text">
+        <h2>Enjoy on your TV.</h2>
+        <p>Watch on Smart TVs, Playstation, Xbox, Chromecast, Apple TV, Blu-ray players, and more.</p>
+      </div>
+      <div class="photo">
+        <img src="/images/tv.png" alt="TV">
+      </div>
+    </div>
+  </div>
+
+  <div class="line"></div>
+  <div class="flex-container">
+    <div class="divided container">
+      <div class="photo">
+        <img src="/images/phone.jpg" alt="PHONE">
+      </div>
+      <div class="text">
+        <h2>Download your shows to watch offline.</h2>
+        <p>Save your favorites easily and always have something to watch.</p>
+      </div>
+    </div>
+  </div>
+
+  <div class="line"></div>
+  <div class="flex-container">
+    <div class="divided container">
+      <div class="text">
+        <h2>Watch everywhere.</h2>
+        <p>Stream unlimited movies and TV shows on your phone, tablet, laptop, and TV without paying more.</p>
+      </div>
+      <div class="photo">
+        <img src="/images/device.png" alt="DEVICE">
+      </div>
+    </div>
+  </div>
+
+  <div class="line"></div>
+  <div class="flex-container">
+    <div class="divided container">
+      <div class="photo">
+        <img src="/images/kids.png" alt="KIDS">
+      </div>
+      <div class="text">
+        <h2>Create profiles for kids.</h2>
+        <p>Send kids on adventures with their favorite characters in a space made just for them—free with your membership.</p>
+      </div>
+    </div>
+  </div>
+  </main>
 
   <script src="script.js"></script>
 </body>
