--- a/index.html
+++ b/index.html
@@ -84,7 +84,79 @@
       </div>
     </div>
   </div>
+
+  <div class="line"></div>
+  <div class="faq">
+    <div class="faq-container">
+      <h1>Frequently Asked Questions</h1>
+      <div class="question-section">
+        <span class="question">What is Netflix?</span>
+        <div class="plus">+</div>
+      </div>
+      <div class="question-section">
+        <span class="question">How much does Netflix cost?</span>
+        <div class="plus">+</div>
+      </div>
+      <div class="question-section">
+        <span class="question">Where can I watch?</span>
+        <div class="plus">+</div>
+      </div>
+      <div class="question-section">
+        <span class="question">How do I cancel?</span>
+        <div class="plus">+</div>
+      </div>
+      <div class="question-section">
+        <span class="question">What can I watch on Netflix?</span>
+        <div class="plus">+</div>
+      </div>
+      <div class="question-section">
+        <span class="question">Is Netflix good for kids?</span>
+        <div class="plus">+</div>
+      </div>
+      <div class="question-section">
+        <span class="question">Why am I seeing this language?</span>
+        <div class="plus">+</div>
+      </div>
+      <p class="ready">Ready to watch? Enter your email to create or restart your membership.</p>
+      <div class="register">
+        <input type="email" placeholder="Email address">
+        <a href="#">Get Started</a>
+      </div> 
+      </div>
+    </div>
+    <div class="line"></div> 
   </main>
+
+  <footer>
+    <div class="footer-container">
+        <span><a href="#">Questions? Contact us.</a></span>
+        <div class="links">
+          <div class="first-section">
+            <a href="#">FAQ</a>
+            <a href="#">Account</a>
+            <a href="#">Jobs</a>
+            <a href="#">Privacy</a>
+            <a href="#">Contact Us</a>
+            <a href="#">Only on Netflix</a>
+          </div>
+          <div class="second-section">
+            <a href="#">Gift Card Terms</a>
+            <a href="#">Media Center</a>
+            <a href="#">Ways to Watch</a>
+            <a href="#">Cookie Preferences</a>
+            <a href="#">Speed Test</a>
+          </div>
+          <div class="third-section">
+            <a href="#">Help Center</a>
+            <a href="#">Investor Relations</a>
+            <a href="#">Terms of Use</a>
+            <a href="#">Corporate Information</a>
+            <a href="#">Legal Notices</a>
+          </div>
+        </div>
+        <div class="uzb">Netflix Uzbekistan</div>
+    </div>
+  </footer>
 
   <script src="script.js"></script>
 </body>
