--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,9 +10,10 @@
   <link rel="icon" type="image/x-icon" href="/images/fav.ico">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
+
 <body>
   <header>
-    <div class="container">
+    <div class="container header-container">
       <div class="logo">
         <img src="/images/netflix.png" alt="NETFLIX">
       </div>
@@ -26,7 +28,7 @@
         <p>Ready to watch? Enter your email to create or restart your membership.</p>
         <div class="register">
           <input type="email" placeholder="Email address">
-          <a href="#">Get Started</a>
+          <a href="#">Get&nbsp;Started</a>
         </div>
       </div>
     </div>
@@ -34,137 +36,154 @@
 
   <main>
     <div class="line"></div>
-  <div class="flex-container">
-    <div class="divided container">
-      <div class="text">
-        <h2>Enjoy on your TV.</h2>
-        <p>Watch on Smart TVs, Playstation, Xbox, Chromecast, Apple TV, Blu-ray players, and more.</p>
-      </div>
-      <div class="photo">
-        <img src="/images/tv.png" alt="TV">
+    <div class="flex-container">
+      <div class="divided">
+        <div class="text">
+          <h2>Enjoy on your TV.</h2>
+          <p>Watch on Smart TVs, Playstation, Xbox, Chromecast, Apple TV, Blu-ray players, and more.</p>
+        </div>
+        <div class="photo">
+          <img src="/images/tv.png" alt="TV">
+        </div>
       </div>
     </div>
-  </div>
 
-  <div class="line"></div>
-  <div class="flex-container">
-    <div class="divided container">
-      <div class="photo">
-        <img src="/images/phone.jpg" alt="PHONE">
-      </div>
-      <div class="text">
-        <h2>Download your shows to watch offline.</h2>
-        <p>Save your favorites easily and always have something to watch.</p>
+    <div class="line"></div>
+    <div class="flex-container">
+      <div class="divided order">
+        <div class="photo">
+          <img src="/images/phone.jpg" alt="PHONE">
+        </div>
+        <div class="text">
+          <h2>Download your shows to watch offline.</h2>
+          <p>Save your favorites easily and always have something to watch.</p>
+        </div>
       </div>
     </div>
-  </div>
 
-  <div class="line"></div>
-  <div class="flex-container">
-    <div class="divided container">
-      <div class="text">
-        <h2>Watch everywhere.</h2>
-        <p>Stream unlimited movies and TV shows on your phone, tablet, laptop, and TV without paying more.</p>
-      </div>
-      <div class="photo">
-        <img src="/images/device.png" alt="DEVICE">
+    <div class="line"></div>
+    <div class="flex-container">
+      <div class="divided">
+        <div class="text">
+          <h2>Watch everywhere.</h2>
+          <p>Stream unlimited movies and TV shows on your phone, tablet, laptop, and TV without paying more.</p>
+        </div>
+        <div class="photo">
+          <img src="/images/device.png" alt="DEVICE">
+        </div>
       </div>
     </div>
-  </div>
 
-  <div class="line"></div>
-  <div class="flex-container">
-    <div class="divided container">
-      <div class="photo">
-        <img src="/images/kids.png" alt="KIDS">
-      </div>
-      <div class="text">
-        <h2>Create profiles for kids.</h2>
-        <p>Send kids on adventures with their favorite characters in a space made just for them—free with your membership.</p>
+    <div class="line"></div>
+    <div class="flex-container">
+      <div class="divided order">
+        <div class="photo">
+          <img src="/images/kids.png" alt="KIDS">
+        </div>
+        <div class="text">
+          <h2>Create profiles for kids.</h2>
+          <p>Send kids on adventures with their favorite characters in a space made just for them—free with your
+            membership.</p>
+        </div>
       </div>
     </div>
-  </div>
 
-  <div class="line"></div>
-  <div class="faq">
-    <div class="faq-container">
-      <h1>Frequently Asked Questions</h1>
-      <div class="question-section">
-        <span class="question">What is Netflix?</span>
-        <div class="plus">+</div>
-      </div>
-      <div class="answer-section hidden">Netflix is a streaming service that offers a wide variety of award-winning TV shows, movies, anime, documentaries, and more on thousands of internet-connected devices.<br><br> You can watch as much as you want, whenever you want without a single commercial – all for one low monthly price. There's always something new to discover and new TV shows and movies are added every week!</div>
-      <div class="question-section">
-        <span class="question">How much does Netflix cost?</span>
-        <div class="plus">+</div>
-      </div>
-      <div class="answer-section hidden">Watch Netflix on your smartphone, tablet, Smart TV, laptop, or streaming device, all for one fixed monthly fee. Plans range from EUR7.99 to EUR11.99 a month. No extra costs, no contracts.</div>
-      <div class="question-section">
-        <span class="question">Where can I watch?</span>
-        <div class="plus">+</div>
-      </div>
-      <div class="answer-section hidden">Watch anywhere, anytime. Sign in with your Netflix account to watch instantly on the web at netflix.com from your personal computer or on any internet-connected device that offers the Netflix app, including smart TVs, smartphones, tablets, streaming media players and game consoles.<br><br>You can also download your favorite shows with the iOS, Android, or Windows 10 app. Use downloads to watch while you're on the go and without an internet connection. Take Netflix with you anywhere.</div>
-      <div class="question-section">
-        <span class="question">How do I cancel?</span>
-        <div class="plus">+</div>
-      </div>
-      <div class="answer-section hidden">Netflix is flexible. There are no pesky contracts and no commitments. You can easily cancel your account online in two clicks. There are no cancellation fees – start or stop your account anytime.</div>
-      <div class="question-section">
-        <span class="question">What can I watch on Netflix?</span>
-        <div class="plus">+</div>
-      </div>
-      <div class="answer-section hidden">Netflix has an extensive library of feature films, documentaries, TV shows, anime, award-winning Netflix originals, and more. Watch as much as you want, anytime you want.</div>
-      <div class="question-section">
-        <span class="question">Is Netflix good for kids?</span>
-        <div class="plus">+</div>
-      </div>
-      <div class="answer-section hidden">The Netflix Kids experience is included in your membership to give parents control while kids enjoy family-friendly TV shows and movies in their own space.<br><br>Kids profiles come with PIN-protected parental controls that let you restrict the maturity rating of content kids can watch and block specific titles you don’t want kids to see.</div>
-      <div class="question-section">
-        <span class="question">Why am I seeing this language?</span>
-        <div class="plus">+</div>
-      </div>
-      <div class="answer-section hidden">Your browser preferences determine the language shown here.</div>
-      <p class="ready">Ready to watch? Enter your email to create or restart your membership.</p>
-      <div class="register">
-        <input type="email" placeholder="Email address">
-        <a href="#">Get Started</a>
-      </div> 
+    <div class="line"></div>
+    <div class="faq">
+      <div class="faq-container">
+        <h1>Frequently Asked Questions</h1>
+        <div class="question-section">
+          <span class="question">What is Netflix?</span>
+          <div class="plus">+</div>
+        </div>
+        <div class="answer-section hidden">Netflix is a streaming service that offers a wide variety of award-winning TV
+          shows, movies, anime, documentaries, and more on thousands of internet-connected devices.<br><br> You can
+          watch as much as you want, whenever you want without a single commercial – all for one low monthly price.
+          There's always something new to discover and new TV shows and movies are added every week!</div>
+        <div class="question-section">
+          <span class="question">How much does Netflix cost?</span>
+          <div class="plus">+</div>
+        </div>
+        <div class="answer-section hidden">Watch Netflix on your smartphone, tablet, Smart TV, laptop, or streaming
+          device, all for one fixed monthly fee. Plans range from EUR7.99 to EUR11.99 a month. No extra costs, no
+          contracts.</div>
+        <div class="question-section">
+          <span class="question">Where can I watch?</span>
+          <div class="plus">+</div>
+        </div>
+        <div class="answer-section hidden">Watch anywhere, anytime. Sign in with your Netflix account to watch instantly
+          on the web at netflix.com from your personal computer or on any internet-connected device that offers the
+          Netflix app, including smart TVs, smartphones, tablets, streaming media players and game consoles.<br><br>You
+          can also download your favorite shows with the iOS, Android, or Windows 10 app. Use downloads to watch while
+          you're on the go and without an internet connection. Take Netflix with you anywhere.</div>
+        <div class="question-section">
+          <span class="question">How do I cancel?</span>
+          <div class="plus">+</div>
+        </div>
+        <div class="answer-section hidden">Netflix is flexible. There are no pesky contracts and no commitments. You can
+          easily cancel your account online in two clicks. There are no cancellation fees – start or stop your account
+          anytime.</div>
+        <div class="question-section">
+          <span class="question">What can I watch on Netflix?</span>
+          <div class="plus">+</div>
+        </div>
+        <div class="answer-section hidden">Netflix has an extensive library of feature films, documentaries, TV shows,
+          anime, award-winning Netflix originals, and more. Watch as much as you want, anytime you want.</div>
+        <div class="question-section">
+          <span class="question">Is Netflix good for kids?</span>
+          <div class="plus">+</div>
+        </div>
+        <div class="answer-section hidden">The Netflix Kids experience is included in your membership to give parents
+          control while kids enjoy family-friendly TV shows and movies in their own space.<br><br>Kids profiles come
+          with PIN-protected parental controls that let you restrict the maturity rating of content kids can watch and
+          block specific titles you don’t want kids to see.</div>
+        <div class="question-section">
+          <span class="question">Why am I seeing this language?</span>
+          <div class="plus">+</div>
+        </div>
+        <div class="answer-section hidden">Your browser preferences determine the language shown here.</div>
+        <p class="ready">Ready to watch? Enter your email to create or restart your membership.</p>
+        <div class="register">
+          <input type="email" placeholder="Email address">
+          <a href="#">Get&nbsp;Started</a>
+        </div>
       </div>
     </div>
-    <div class="line"></div> 
+    <div class="line"></div>
   </main>
 
   <footer>
     <div class="footer-container">
-        <span><a href="#">Questions? Contact us.</a></span>
-        <div class="links">
-          <div class="first-section">
-            <a href="#">FAQ</a>
-            <a href="#">Account</a>
-            <a href="#">Jobs</a>
-            <a href="#">Privacy</a>
-            <a href="#">Contact Us</a>
-            <a href="#">Only on Netflix</a>
-          </div>
-          <div class="second-section">
-            <a href="#">Gift Card Terms</a>
-            <a href="#">Media Center</a>
-            <a href="#">Ways to Watch</a>
-            <a href="#">Cookie Preferences</a>
-            <a href="#">Speed Test</a>
-          </div>
-          <div class="third-section">
-            <a href="#">Help Center</a>
-            <a href="#">Investor Relations</a>
-            <a href="#">Terms of Use</a>
-            <a href="#">Corporate Information</a>
-            <a href="#">Legal Notices</a>
-          </div>
+      <span><a href="#">Questions? Contact us.</a></span>
+      <div class="links">
+        <div class="first-section">
+          <a href="#">FAQ</a>
+          <a href="#">Account</a>
+          <a href="#">Jobs</a>
+          <a href="#">Privacy</a>
+          <a href="#">Contact Us</a>
+          <a href="#">Only on Netflix</a>
         </div>
-        <div class="uzb">Netflix Uzbekistan</div>
+        <div class="second-section">
+          <a href="#">Gift Card Terms</a>
+          <a href="#">Media Center</a>
+          <a href="#">Ways to Watch</a>
+          <a href="#">Cookie Preferences</a>
+          <a href="#">Speed Test</a>
+        </div>
+        <div class="third-section">
+          <a href="#">Help Center</a>
+          <a href="#">Investor Relations</a>
+          <a href="#">Terms of Use</a>
+          <a href="#">Corporate Information</a>
+          <a href="#">Legal Notices</a>
+        </div>
+      </div>
+      <div class="uzb">Netflix Uzbekistan</div>
     </div>
   </footer>
 
   <script src="script.js"></script>
 </body>
+
 </html>
