--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
           <a href="#">Cookie Preferences</a>
           <a href="#">Speed Test</a>
         </div>
-        <div class="third-section">
+        <div class="third-section hidden-section">
           <a href="#">Help Center</a>
           <a href="#">Investor Relations</a>
           <a href="#">Terms of Use</a>
